--- a/genetic_optimize.ipynb
+++ b/genetic_optimize.ipynb
@@ -21,7 +21,7 @@
     "from torch.nn import Linear, Sequential, BatchNorm1d, ReLU\n",
     "from torch_geometric.nn import GINConv, global_add_pool\n",
     "from torch_geometric.data import Data\n",
-    "from gnn_dataset_generation import PolymerDataset\n",
+    "from data_generation import PolymerDataset\n",
     "\n",
     "class GIN(torch.nn.Module):\n",
     "    def __init__(self, in_dim, hidden_dim):\n",
