--- a/gnn.ipynb
+++ b/gnn.ipynb
@@ -40,7 +40,7 @@
     "from sklearn.metrics import r2_score\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from gnn_dataset_generation import PolymerDataset\n",
+    "from data_generation import PolymerDataset\n",
     "from torch_geometric.nn import GINConv, global_add_pool\n",
     "from torch.nn import Linear, Sequential, BatchNorm1d, ReLU\n",
     "\n",
